--- a/demo.html
+++ b/demo.html
@@ -1,6 +1,7 @@
 <html>
 <body>
 <h1> Good morning </h1>
-<h2> Welcome to the today's session</h2>
+<h2> Welcome to the HungryHub</h2>
+<h3> Menu </h3>
 </body>
 </html>
